--- a/index.html
+++ b/index.html
@@ -6,7 +6,27 @@
 </head>
 
 <body>
-
+    <hr>
+    <center>
+        <h3>
+            <a href="https://youtube.com">
+                Youtube
+            </a>
+        </h3>
+        <hr>
+        <h3>
+            <a href="https://instagram.com">
+                instagram
+            </a>
+        </h3>
+        <hr>
+        <h3>
+            <a href="https://whatsapp.com">
+                whatsapp
+            </a>
+        </h3>
+    </center>
+    <hr>
 </body>
 
 </html>
